<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecomendacaoResfriadoActivity"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/resfriadoHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/rec_resfriado_header"/>
        <TextView
            android:id="@+id/resfriadoTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoHeader"
            android:text="@string/rec_resfriado_titulo1"
            style="@style/styleTitulo"/>
        <TextView
            android:id="@+id/resfriadoTxt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rec_resfriado_parag1"
            app:layout_constraintTop_toBottomOf="@id/resfriadoTitle1"
            style="@style/styleTexto"/>
        <TextView
            android:id="@+id/resfriadoSubt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoTxt1"
            android:text="@string/rec_resfriado_subtitulo1"
            style="@style/styleSubTitulo"/>
        <TextView
            android:id="@+id/resfriadoTxt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoSubt1"
            android:text="@string/rec_resfriado_parag2"
            style="@style/styleTexto"/>
        <TextView
            android:id="@+id/resfriadoSubt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoTxt2"
            android:text="@string/rec_resfriado_subtitulo2"
            style="@style/styleSubTitulo"/>
        <TextView
            android:id="@+id/resfriadoTxt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoSubt2"
            android:text="@string/rec_resfriado_parag3"
            style="@style/styleTexto"/>
        <TextView
            android:id="@+id/resfriadoSubt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoTxt3"
            android:text="@string/rec_resfriado_subtitulo3"
            style="@style/styleSubTitulo"/>
        <TextView
            android:id="@+id/resfriadoTxt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoSubt3"
            android:text="@string/rec_resfriado_parag4"
            style="@style/styleTexto"/>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieResfriado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/virussick"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_constraintTop_toBottomOf="@id/resfriadoTxt4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/resfriadoSubt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lottieResfriado"
            android:text="@string/rec_resfriado_subtitulo4"
            style="@style/styleSubTitulo"/>
        <TextView
            android:id="@+id/resfriadoTxt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoSubt4"
            android:text="@string/rec_resfriado_parag5"
            style="@style/styleTexto"/>
        <TextView
            android:id="@+id/resfriadoSubt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoTxt5"
            android:text="@string/rec_resfriado_subtitulo5"
            style="@style/styleSubTitulo"/>
        <TextView
            android:id="@+id/resfriadoTxt6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoSubt5"
            android:text="@string/rec_resfriado_parag6"
            style="@style/styleTexto"/>
        <TextView
            android:id="@+id/resfriadoSubt6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoTxt6"
            android:text="@string/rec_resfriado_subtitulo6"
            style="@style/styleSubTitulo"/>
        <TextView
            android:id="@+id/resfriadoTxt7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoSubt6"
            android:text="@string/rec_resfriado_parag7"
            style="@style/styleTexto"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/resfriadoTxt7"
            android:text="@string/rec_tuberculose_footer"
            style="@style/styleRodape"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>